--- a/action.yaml
+++ b/action.yaml
@@ -36,6 +36,25 @@ inputs:
     default: ''
 
 runs:
-  using: 'docker'
-  # TODO: Replace with actual Docker Hub repository and pinned digest
-  image: 'docker://dockerhub-repo/fleet-management-sync-action@sha256:DIGEST'
+  using: 'composite'
+  steps:
+    - name: Setup Go
+      uses: actions/setup-go@faf52423ec0d44c58f68e83b614bfcd99dded66f
+      with:
+        go-version-file: '${{ github.action_path }}/go.mod'
+
+    - name: Run Fleet Management Sync
+      shell: bash
+      env:
+        INPUT_PIPELINES_ROOT_PATH: ${{ inputs.pipelines-root-path }}
+        INPUT_FM_URL: ${{ inputs.fm-url }}
+        INPUT_FM_USERNAME: ${{ inputs.fm-username }}
+        INPUT_FM_TOKEN: ${{ inputs.fm-token }}
+        INPUT_TIMEOUT: ${{ inputs.timeout }}
+        INPUT_VERBOSE: ${{ inputs.verbose }}
+        INPUT_DRY_RUN: ${{ inputs.dry-run }}
+        INPUT_NAMESPACE: ${{ inputs.namespace }}
+        INPUT_GLOBAL_MATCHER: ${{ inputs.global-matcher }}
+      run: |
+        cd "${{ github.action_path }}"
+        go run main.go
